cmake_minimum_required(VERSION 3.24)
project(TeTris)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static-libgcc -static-libstdc++ -static -pthread -mwindows")
set(CMAKE_CXX_STANDARD 17)
set(SFML_DIR "C:/SFML/lib/cmake/SFML")
set(SFML_STATIC_LIBRARIES TRUE)
find_package(SFML 2.5.1 COMPONENTS graphics audio REQUIRED)
add_executable(TeTris main.cpp BackGround.h Brick.cpp Brick.h TetroMinos.cpp TetroMinos.h TeTris.cpp TeTris.h BlockMovement.cpp BlockMovement.h DrawingGame.cpp DrawingGame.h)
target_link_libraries(TeTris sfml-graphics sfml-audio)